--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
+    "react-wheel-of-prizes": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
